--- a/views/partials/header-logged.ejs
+++ b/views/partials/header-logged.ejs
@@ -18,11 +18,11 @@
         </a>
     </div>
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="/thread/9" class="nav-link px-2">Szabályzatok</a></li>
+        <li><a href="/thread/39" class="nav-link px-2">Szabályzatok</a></li>
         <li><a href="/pp" class="nav-link px-2">Prémiumpontok</a></li>
-        <li><a href="/thread/11" class="nav-link px-2">Eventek</a></li>
-        <li><a href="/thread/12" class="nav-link px-2">Update</a></li>
-        <li><a href="/thread/13" class="nav-link px-2">Adminok</a></li>
+        <li><a href="#" class="nav-link px-2">Eventek</a></li>
+        <li><a href="#" class="nav-link px-2">Update</a></li>
+        <li><a href="#" class="nav-link px-2">Adminok</a></li>
     </ul>
     <div class="col-md-3 text-end">
         <% if (typeof details !== "undefined" && details.username) { %>
