--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <div class="container d-flex flex-wrap align-items-center justify-content-center form-box mb-5">
                 <div class="d-flex flex-wrap flex-column align-items-center justify-content-center login">
                     <form action="/login" method="post" class="d-flex flex-wrap flex-column align-items-center justify-content-center mb-3">
-                        <h1 class="form-tex">SealMTA</h1>
+                        <h1 class="form-tex">SealineMTA</h1>
                         <input type="text" placeholder="Felhasználónév" class="form-input login-input" name="loginUser">
                         <input type="password" placeholder="Jelszó" class="form-input login-input" name="loginPass">
                         <a href="#" class="password-reminder password-reminder-login">Elfelejtett jelszó?</a>
